--- a/debian/control
+++ b/debian/control
@@ -2,8 +2,8 @@ Source: ospd
 Section: python
 Priority: optional
 Maintainer: Mohammad Razavi <mrazavi64@gmail.com>
-Build-Depends: debhelper (>= 10), dh-python, python3-all, python3-setuptools, python3-lxml, python3-defusedxml, python3-paramiko, xsltproc
-Standards-Version: 4.1.2
+Build-Depends: debhelper-compat (= 12), dh-python, python3-all, python3-setuptools, python3-lxml, python3-defusedxml, python3-paramiko, xsltproc
+Standards-Version: 4.4.1
 Homepage: https://community.greenbone.net/
 X-Python3-Version: >= 3.2
 Vcs-Git: https://github.com/admirito/ospd.git
